everHour api working
