# src/routes/everHour.routes.ts
@@ -1,8 +1,12 @@
-import { getWeekTasks } from "../controllers/everHour.controller"
+import { getWeekTasks, updateTasks } from "../controllers/everHour.controller"
+import { getEverHourUserId } from '../middleware/getEverHourUserId';
+
+
 
 
 const everHourRoute = function (app) {
-    app.post("/api/everHour/getWeekTasks", getWeekTasks)
+    app.post("/api/everHour/getWeekTasks", getEverHourUserId, getWeekTasks);
+    app.put("/api/everHour/updateTask", getEverHourUserId, updateTasks)
 }
 
 export { everHourRoute }
