# src/swagger/everHour.json
@@ -1,39 +1,59 @@
 {
     "definitions": {
         "WeekTasksInput": {
-          "required": ["userId","xApiKey","userWeekId"],
+          "required": ["week"],
           "properties": {
-            "userId": {
-              "type": "string",
-              "uniqueItems": true
-            },
-            "xApiKey":{
-                "type": "string"
-            },
-            "userWeekId":{
+            "week":{
                 "type":"string"
             }
 
         }
       },
-    "TimeSlot":{
-                "properties": {
+      "TaskUpdateInput": {
+          "required": ["time","date","taskId"],
+          "properties": {
+            "comment": {
+              "type": "string",
+              "uniqueItems": true
+            },
+            "date":{
+                "type": "string"
+            },
+            "taskId":{
+               "type": "string"
+            },
+            "time":{
+                "type":"string"
+            },
+            "label":{
+              "type": "array",
+                  "items":{
+                    "type": "string"
+                  }
+            }
 
-                "id":{
-                    "type": "string"
+        }
+      },
+
+    "TimeSlot":{
+         "properties": {
+            "id":{
+               "type": "string"
                 },
-                "date":{
-                    "type": "string"
+               "date":{
+                 "type": "string"
                 },
-                "comment":{
-                    "type": "string"
+               "comment":{
+                  "type": "string"
                 },
-                "manualTime":{
+               "manualTime":{
                     "type": "number"
                 }
             }
 
     },
+
+  
     "TaskItem":{
          "properties": {
 
@@ -49,18 +69,24 @@
                 "projectName":{
                     "type": "string"
                 },
-                "taskTimes":{
+                "taskTimes": {
                     "type": "array",
                     "items":{
-                    "allOf": [
-                        { "$ref": "#/definitions/TimeSlot" }
-                      ]
-                     }
+                         "$ref": "#/definitions/TimeSlot"
+                         }
+                     },
+                "dailyTime":{
+                  "type": "array",
+                  "items":{
+                    "type": "string"
+                  }
+
                 },
                 "totalTime":{
                     "type": "number"
                 }
             }
+          
 
     },
     "WeekTasks": {
@@ -87,9 +113,7 @@
                       "$ref": "#/definitions/WeekTasksInput"
                     },
                     "example": {
-                      "userId":"861229",
-                      "xApiKey": "0146-63cc-5847c7-079bc3-636a5cdf",
-                      "userWeekId":"8612292236"
+                      "week":"36"
                     }
                       
                   }
@@ -106,7 +130,49 @@
                   "content": {
                     "application/json": {
                       "schema": {
-                         "$ref": "#/definitions/WorkItems"
+                         "$ref": "#/definitions/WeekTasks"
+                        }
+                        
+                    }
+                  }
+                }
+              }
+
+        }
+    },
+     "/api/everHour/updateTask": {
+        "put": {
+            "tags" : ["EverHour"],
+            "requestBody": {
+                "description": "update the task time ,comment, label",
+                "required": " true",
+                "content": {
+                  "application/json": {
+                    "schema": {
+                      "$ref": "#/definitions/TaskUpdateInput"
+                    },
+                    "example": {
+                      "time":"180",
+                      "date": "2022-10-20",
+                      "comment":"Ph testing....",
+                      "taskId":"ev:254620015597338"
+                    }
+                      
+                  }
+                }
+            },
+            "security": [
+              {
+                 "Authorization": []
+              }
+            ],
+            "responses": {
+                "200": {
+                  "description": "Updated Tasks",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                         "$ref": "#/definitions/TaskUpdateInput"
                         }
                         
                     }
